# dupcheck

./: README.md  dupcheck.cabal
app/: Main.hs
src/: DupCheck.hs
