name:                dupcheck
version:             0.1.0.0
synopsis:            Checker of duplicated files
description:         This command line tool checks duplicated files in specified folders.
homepage:            https://github.com/satosystems/dupcheck#readme
license:             BSD3
license-file:        LICENSE
author:              Satoshi Ogata
maintainer:          satosystems@gmail.com
copyright:           2017 Satoshi Ogata
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DupCheck
  other-modules:       Paths_dupcheck
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , cmdargs
                     , directory
                     , pureMD5
                     , Unique
  default-language:    Haskell2010

executable dupcheck
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , async
                     , dupcheck
                     , pureMD5
  default-language:    Haskell2010

test-suite dupcheck-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dupcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/satosystems/dupcheck

